# shufflemaster-simulation

./: .gitignore  AGENTS.md  README.md  pyproject.toml
experiments/: __init__.py  conditional_profitability.py  extreme_tail_profitability.py  fading_exclusion_validation.py  metrics.py  multi_box_counterfactual.py  observable_card_response.py  one2six_recurrence.py  one2six_recurrence_sensitivity.py  physical_iid.py  plots.py  runners.py  score_conditioned_action_values.py  single_box_game_validation.py  streak_dependence_audit.py
scripts/: baseline_game.py  run_casino_blackjack_baseline.py  run_conditional_profitability_experiment.py  run_extreme_tail_profitability.py  run_fading_exclusion_validation.py  run_iid_baseline_experiment.py  run_multi_box_counterfactual_experiment.py  run_observable_card_response_experiment.py  run_one2six_recurrence_experiment.py  run_one2six_recurrence_sensitivity.py  run_one2six_source_diagnostics.py  run_physical_iid_recurrence_experiment.py  run_score_conditioned_action_values.py  run_single_box_game_validation.py  run_star_blackjack_baseline.py  run_streak_dependence_audit.py
tests/: __init__.py  test_card_sources.py  test_cards.py  test_casino_blackjack_rounds.py  test_casino_blackjack_rules.py  test_conditional_profitability.py  test_discard_model.py  test_experiment_metrics.py  test_experiment_plots.py  test_extreme_tail_profitability.py  test_fading_exclusion_validation.py  test_finite_shoe_card_source.py  test_hand_values.py  test_iid_baseline_experiment.py  test_manual_shoe_card_source.py  test_multi_box_counterfactual.py  (+15 more)
(+14 files in other folders)
